--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container-topo">
         <div class="lado-esquerdo">
             <h1>Ju Couto Artes</h1>
-            <img src="/assets/img/related-image-borboleta-rosa-vintage-11563198063obwrgfnt06.png" alt="logo"
+            <img src="./assets/img/related-image-borboleta-rosa-vintage-11563198063obwrgfnt06.png" alt="logo"
                 width="15%">
         </div>
         <div class="lado-direito">
@@ -33,11 +33,11 @@
     </div>
     <div>
         <div class="icones">
-            <a href="https://www.instagram.com/jucouto.arte/"><img src="/assets/img/icons8-instagram-50-grey.png"
+            <a href="https://www.instagram.com/jucouto.arte/"><img src="./assets/img/icons8-instagram-50-grey.png"
                     alt="insta"></a>
             <a href="https://www.youtube.com/channel/UCq2wEEyH1fXbZkPRIoaJkWA"><img
-                    src="/assets/img/icons8-youtube-logo-50-grey.png" alt="youtube"></a>
-            <a href="https://www.linkedin.com/in/juliana-couto/"> <img src="/assets/img/icons8-linkedin-50-grey.png"
+                    src="./assets/img/icons8-youtube-logo-50-grey.png" alt="youtube"></a>
+            <a href="https://www.linkedin.com/in/juliana-couto/"> <img src="./assets/img/icons8-linkedin-50-grey.png"
                     alt="linkedin"></a>
         </div>
         <h1 class="titulo">Ilustrações e Desenho Realista</h1>
@@ -54,18 +54,18 @@
     <!-- <div class="display"> -->
     <div class="display">
         <div class="card">
-            <img src="/assets/img/artedesenho.png" alt="artedesenho" width="250px" height="200px">
+            <img src="./assets/img/artedesenho.png" alt="artedesenho" width="250px" height="200px">
             <p>Desenho Realista</p>
             <div class="container-botao"></div>
             <a href="https://www.instagram.com/p/B9pPYMOAm3_/">visitar</a>
         </div>
         <div class="card">
-            <img src="/assets/img/anadesenho.jpg" alt="anadesenho" width="250px" height="200px">
+            <img src="./assets/img/anadesenho.jpg" alt="anadesenho" width="250px" height="200px">
             <p>Ilustração</p>
             <a href="https://www.instagram.com/p/CBZSTUSAafk/">visitar</a>
         </div>
         <div class="card">
-            <img src="/assets/img/casaldesenho.jpg" alt="casaldesenho" width="250px" height="200px">
+            <img src="./assets/img/casaldesenho.jpg" alt="casaldesenho" width="250px" height="200px">
             <p>Desenho</p>
             <a href="https://www.instagram.com/p/CcIjJCIuOdx/">visitar</a>
         </div>
@@ -73,17 +73,17 @@
 
     <div class="display">
         <div class="card">
-            <img src="/assets/img/anafoto.jpg" alt="anafoto" width="250px" height="200px">
+            <img src="./assets/img/anafoto.jpg" alt="anafoto" width="250px" height="200px">
             <p>Desenho</p>
             <a href="https://www.instagram.com/p/CcIjJCIuOdx/">visitar</a>
         </div>
         <div class="card">
-            <img src="/assets/img/arte.jpg" alt=" arte" width="250px" height="200px">
+            <img src="./assets/img/arte.jpg" alt=" arte" width="250px" height="200px">
             <p>Desenho</p>
             <a href="https://www.instagram.com/p/CcIjJCIuOdx/">visitar</a>
         </div>
         <div class="card">
-            <img src="/assets/img/casalfoto.jpg" alt="casal foto" width="250px" height="200px">
+            <img src="./assets/img/casalfoto.jpg" alt="casal foto" width="250px" height="200px">
             <p>Desenho</p>
             <a href="https://www.instagram.com/p/CcIjJCIuOdx/">visitar</a>
         </div>
@@ -99,7 +99,7 @@
         <hr>
 
         <p class="foto-perfil">
-            <img src="/assets/img/fotoperfil.jpg" alt=" fotoperfil" width="150px" height="150px">
+            <img src="./assets/img/fotoperfil.jpg" alt=" fotoperfil" width="150px" height="150px">
            Juliana tem 33 anos, sempre teve a arte como um hobbie e forma de se espressar. Participou de workshops de aquarela, pintura em tecido,
            pintura em madeira, ilustração com técnica mista e concluiu o curso de desenho realista avançado do Charles Laveso.
 
@@ -119,9 +119,9 @@
 <footer>
     <div class="container-rodape">
         <h3>Desenvolvido por Juliana Couto</h3>
-        <img src="/assets/img/icons8-instagram-50-white.png" alt="instagram" width="30px" height="30px">
-        <img src="/assets/img/icons8-youtube-logo-50-white.png" alt="youtube" width="30px" height="30px">
-        <img src="/assets/img/icons8-linkedin-50-white.png" alt="linkedin" width="30px" height="30px">
+        <img src="./assets/img/icons8-instagram-50-white.png" alt="instagram" width="30px" height="30px">
+        <img src="./assets/img/icons8-youtube-logo-50-white.png" alt="youtube" width="30px" height="30px">
+        <img src="./assets/img/icons8-linkedin-50-white.png" alt="linkedin" width="30px" height="30px">
     </div>
    
 </footer>
