--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="icon" type="image/x-icon" href="./assets/img/lapis.png">
     <title>Ju Couto Artes</title>
 </head>
 
@@ -14,8 +15,7 @@
     <div class="container-topo">
         <div class="lado-esquerdo">
             <h1>Ju Couto Artes</h1>
-            <img src="./assets/img/related-image-borboleta-rosa-vintage-11563198063obwrgfnt06.png" alt="logo"
-                width="15%">
+            <img src="./assets/img/lapis.png" alt="logo" width="15%">
         </div>
         <div class="lado-direito">
             <ul>
@@ -34,14 +34,16 @@
     <div>
         <div class="icones">
             <a href="https://www.instagram.com/jucouto.arte/"><img src="./assets/img/icons8-instagram-50-grey.png"
-                    alt="insta"></a>
+                    alt="insta" width="40px" height="40px"></a>
             <a href="https://www.youtube.com/channel/UCq2wEEyH1fXbZkPRIoaJkWA"><img
-                    src="./assets/img/icons8-youtube-logo-50-grey.png" alt="youtube"></a>
+                    src="./assets/img/icons8-youtube-logo-50-grey.png" alt="youtube" width="40px" height="40px"></a>
             <a href="https://www.linkedin.com/in/juliana-couto/"> <img src="./assets/img/icons8-linkedin-50-grey.png"
-                    alt="linkedin"></a>
+                    alt="linkedin" width="40px" height="40px"> </a>
         </div>
+
         <h1 class="titulo">Ilustrações e Desenho Realista</h1>
-        <h2 class="subtitulo">Ilistrações em aquarela e desenhos realistas feitos em grafite.<br>Conheça um pouco da minha arte.</h2>
+        <h2 class="subtitulo">Ilistrações em aquarela e desenhos realistas feitos em grafite.<br>Conheça um pouco da
+            minha arte.</h2>
 
         <selection id="sites">
             <div>
@@ -55,37 +57,38 @@
     <div class="display">
         <div class="card">
             <img src="./assets/img/artedesenho.png" alt="artedesenho" width="250px" height="200px">
-            <p>Desenho Realista</p>
-            <div class="container-botao"></div>
-            <a href="https://www.instagram.com/p/B9pPYMOAm3_/">visitar</a>
+            <p>Desenho Oração</p>
+            <a class="button" href="https://www.instagram.com/p/B9pPYMOAm3_/"><button
+                    class="button">visitar</button></a>
         </div>
         <div class="card">
             <img src="./assets/img/anadesenho.jpg" alt="anadesenho" width="250px" height="200px">
-            <p>Ilustração</p>
-            <a href="https://www.instagram.com/p/CBZSTUSAafk/">visitar</a>
+            <p>Ilustração Colorida</p>
+            <a class="button" href="https://www.instagram.com/p/CBZSTUSAafk/"><button
+                    class="button">visitar</button></a>
         </div>
         <div class="card">
-            <img src="./assets/img/casaldesenho.jpg" alt="casaldesenho" width="250px" height="200px">
-            <p>Desenho</p>
-            <a href="https://www.instagram.com/p/CcIjJCIuOdx/">visitar</a>
+            <img src="./assets/img/ww.jpg" alt="WW" width="250px" height="200px">
+            <p>Desenho Walter White</p>
+            <a href="https://www.instagram.com/p/CGLZmEGgZQ3/"><button class="button">visitar</button></a>
         </div>
     </div>
 
     <div class="display">
         <div class="card">
-            <img src="./assets/img/anafoto.jpg" alt="anafoto" width="250px" height="200px">
-            <p>Desenho</p>
-            <a href="https://www.instagram.com/p/CcIjJCIuOdx/">visitar</a>
+            <img src="./assets/img/Sandy.jpg" alt="Sandy" width="250px" height="200px">
+            <p>Desenho Sandy</p>
+            <a href="https://www.instagram.com/p/CM--Qr9ru4g/"><button class="button">visitar</button></a>
         </div>
         <div class="card">
-            <img src="./assets/img/arte.jpg" alt=" arte" width="250px" height="200px">
-            <p>Desenho</p>
-            <a href="https://www.instagram.com/p/CcIjJCIuOdx/">visitar</a>
+            <img src="./assets/img/moto.jpg" alt=" moto" width="250px" height="200px">
+            <p>Reflexos</p>
+            <a href="https://www.instagram.com/p/CFlW62wguQL/"><button class="button">visitar</button></a>
         </div>
         <div class="card">
-            <img src="./assets/img/casalfoto.jpg" alt="casal foto" width="250px" height="200px">
-            <p>Desenho</p>
-            <a href="https://www.instagram.com/p/CcIjJCIuOdx/">visitar</a>
+            <img src="./assets/img/rosto.png" alt="casal foto" width="250px" height="200px">
+            <p>Desenho Feminino</p>
+            <a href="https://www.instagram.com/p/CdW25BlOchT/"><button class="button">visitar</button></a>
         </div>
         <!-- </div> -->
 
@@ -97,33 +100,56 @@
         <h1 class="secao">Sobre</h1>
 
         <hr>
+        <div class="descricao-perfil">
+            <img src="./assets/img/fotoperfil.jpg" alt=" fotoperfil" width="180px" height="180px">
+            <p class="texto-descricao">
+                Juliana tem 33 anos, sempre teve a arte como um hobbie e forma de se espressar. Participou de workshops
+                de
+                aquarela, pintura em tecido,
+                pintura em madeira, ilustração com técnica mista e concluiu o curso de desenho realista avançado do
+                Charles
+                Laveso.
 
-        <p class="foto-perfil">
-            <img src="./assets/img/fotoperfil.jpg" alt=" fotoperfil" width="150px" height="150px">
-           Juliana tem 33 anos, sempre teve a arte como um hobbie e forma de se espressar. Participou de workshops de aquarela, pintura em tecido,
-           pintura em madeira, ilustração com técnica mista e concluiu o curso de desenho realista avançado do Charles Laveso.
+            </p>
+        </div>
 
-        </p>
         </selection>
     </div>
 
-    <div>
+    <div class="newsletter">
         <selection id="newsletter">
             <h1 class="secao">Newsletter </h1>
             <hr>
             <h2 class="subtitulo">Assine nossa Newsletter e fique por dentro das Novidades!!!</h2>
+            <form action="#">
+                <input type="text" placeholder="Nome" />
+                <input type="text" placeholder="Digite seu e-mail" />
+                <div>
+                    <input id="termo" type="checkbox">
+                    <label class="font-size" for="termo">Desejo receber e-mail com novidades</label>
+                </div>
+                <input type="submit" />
+
+            </form>
+
         </selection>
     </div>
+    <footer>
+        <div class="container-rodape">
+            <div class="rodape-texto">
+                <p class="margin-p">Desenvolvido por Juliana Couto</p>
+                <p class="margin-p">Residência de TIC Software 2022.1 Turma 1 </p>
+            </div>
+            <div class="icones-rodape margin-p">
+                <img src="./assets/img/icons8-instagram-50-white.png" alt="instagram" width="30px" height="30px">
+                <img src="./assets/img/icons8-youtube-logo-50-white.png" alt="youtube" width="30px" height="30px">
+                <img src="./assets/img/icons8-linkedin-50-white.png" alt="linkedin" width="30px" height="30px">
+            </div>
 
+        </div>
+    </footer>
 </body>
-<footer>
-    <div class="container-rodape">
-        <h3>Desenvolvido por Juliana Couto</h3>
-        <img src="./assets/img/icons8-instagram-50-white.png" alt="instagram" width="30px" height="30px">
-        <img src="./assets/img/icons8-youtube-logo-50-white.png" alt="youtube" width="30px" height="30px">
-        <img src="./assets/img/icons8-linkedin-50-white.png" alt="linkedin" width="30px" height="30px">
-    </div>
-   
-</footer>
+
+
 
 </html>
