--- a/index.html
+++ b/index.html
@@ -6,31 +6,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="icon" type="image/x-icon" href="./assets/img/lapis.png">
+    <link rel="icon" type="image/x-icon" href="./assets/favicon/lapis.png">
     <title>Ju Couto Artes</title>
 </head>
 
 <body>
-
-    <div class="container-topo">
-        <div class="lado-esquerdo">
-            <h1>Ju Couto Artes</h1>
-            <img src="./assets/img/lapis.png" alt="logo" width="15%">
+    <header>
+        <div class="container-topo">
+            <div class="lado-esquerdo">
+                <h1>Ju Couto Artes</h1>
+                <img src="./assets/img/lapis.png" alt="logo" width="15%">
+            </div>
+            <div class="lado-direito">
+                <ul>
+                    <li>
+                        <a class="navegador" href="#sites">Artes</a>
+                    </li>
+                    <li>
+                        <a class="navegador" href="#sobre">Sobre</a>
+                    </li>
+                    <li>
+                        <a class="navegador" href="#newsletter">Newsletter</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div class="lado-direito">
-            <ul>
-                <li>
-                    <a class="navegador" href="#sites">Artes</a>
-                </li>
-                <li>
-                    <a class="navegador" href="#sobre">Sobre</a>
-                </li>
-                <li>
-                    <a class="navegador" href="#newsletter">Newsletter</a>
-                </li>
-            </ul>
-        </div>
-    </div>
+    </header>
     <div>
         <div class="icones">
             <a href="https://www.instagram.com/jucouto.arte/"><img src="./assets/img/icons8-instagram-50-grey.png"
@@ -100,7 +101,7 @@
         <h1 class="secao">Sobre</h1>
 
         <hr>
-        <div class="descricao-perfil">
+        <div >
             <img src="./assets/img/fotoperfil.jpg" alt=" fotoperfil" width="180px" height="180px">
             <p class="texto-descricao">
                 Juliana tem 33 anos, sempre teve a arte como um hobbie e forma de se espressar. Participou de workshops
