Correção espaçamento do card

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
 
         <h1 class="titulo">Ilustrações e Desenho Realista</h1>
-        <h2 class="subtitulo">Ilistrações em aquarela e desenhos realistas feitos em grafite.<br>Conheça um pouco da
+        <h2 class="subtitulo">Ilustrações em aquarela e desenhos realistas feitos em grafite.<br>Conheça um pouco da
             minha arte.</h2>
 
         <selection id="sites">
@@ -54,7 +54,7 @@
 
     </div>
     <hr>
-    <!-- <div class="display"> -->
+     <!-- <div class="container-display">  -->
     <div class="display">
         <div class="card">
             <img src="./assets/img/artedesenho.png" alt="artedesenho" width="250px" height="200px">
@@ -91,11 +91,11 @@
             <p>Desenho Feminino</p>
             <a href="https://www.instagram.com/p/CdW25BlOchT/"><button class="button">visitar</button></a>
         </div>
-        <!-- </div> -->
+        </div>
 
 
 
-    </div>
+   <!--  </div> -->
     <div class="foto-perfil">
         <selection id="sobre"></selection>
         <h1 class="secao">Sobre</h1>
@@ -105,12 +105,10 @@
             <img src="./assets/img/fotoperfil.jpg" alt=" fotoperfil" width="180px" height="180px">
             <p class="texto-descricao">
                 Juliana tem 33 anos, sempre teve a arte como um hobbie e forma de se espressar. Participou de workshops
-                de
-                aquarela, pintura em tecido,
-                pintura em madeira, ilustração com técnica mista e concluiu o curso de desenho realista avançado do
-                Charles
-                Laveso.
-
+                de aquarela, pintura em tecido, pintura em madeira, ilustração com técnica mista e concluiu o curso de desenho realista avançado do
+                Charles Laveso. 
+                Na área profissional busca ser desenvolvedora FrontEnd, aperfeiçoando seu conhecimento participando 
+                da Residência de TIC Software do Serratec.
             </p>
         </div>
 
