Adicionando icone,imagem e corrigindo link

--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
                     src="./assets/img/icons8-youtube-logo-50-grey.png" alt="youtube" width="40px" height="40px"></a>
             <a href="https://www.linkedin.com/in/juliana-couto/"> <img src="./assets/img/icons8-linkedin-50-grey.png"
                     alt="linkedin" width="40px" height="40px"> </a>
+            <a href="https://github.com/JuCouto"> <img src="./assets/img/icons8-github-48.png"
+                        alt="github" width="40px" height="40px"> </a>
         </div>
 
-        <h1 class="titulo">Ilustrações e Desenho Realista</h1>
-        <h2 class="subtitulo">Ilustrações em aquarela e desenhos realistas feitos em grafite.<br>Conheça um pouco da
+        <h1 class="titulo">Desenho Realista</h1>
+        <h2 class="subtitulo">Desenhos realistas feitos em grafite.<br>Conheça um pouco da
             minha arte.</h2>
 
         <selection id="sites">
@@ -54,7 +56,7 @@
 
     </div>
     <hr>
-     <!-- <div class="container-display">  -->
+     
     <div class="display">
         <div class="card">
             <img src="./assets/img/artedesenho.png" alt="artedesenho" width="250px" height="200px">
@@ -63,9 +65,9 @@
                     class="button">visitar</button></a>
         </div>
         <div class="card">
-            <img src="./assets/img/anadesenho.jpg" alt="anadesenho" width="250px" height="200px">
-            <p>Ilustração Colorida</p>
-            <a class="button" href="https://www.instagram.com/p/CBZSTUSAafk/"><button
+            <img src="./assets/img/Cameron.png" alt="Cameron" width="250px" height="200px">
+            <p>Desenho feminino</p>
+            <a class="button" href="https://www.instagram.com/p/CdgSHxWOpka/"><button
                     class="button">visitar</button></a>
         </div>
         <div class="card">
@@ -92,10 +94,7 @@
             <a href="https://www.instagram.com/p/CdW25BlOchT/"><button class="button">visitar</button></a>
         </div>
         </div>
-
-
-
-   <!--  </div> -->
+  
     <div class="foto-perfil">
         <selection id="sobre"></selection>
         <h1 class="secao">Sobre</h1>
@@ -107,7 +106,7 @@
                 Juliana tem 33 anos, sempre teve a arte como um hobbie e forma de se espressar. Participou de workshops
                 de aquarela, pintura em tecido, pintura em madeira, ilustração com técnica mista e concluiu o curso de desenho realista avançado do
                 Charles Laveso. 
-                Na área profissional busca ser desenvolvedora FrontEnd, aperfeiçoando seu conhecimento participando 
+                Na área profissional busca ser desenvolvedora Front-end, aperfeiçoando seu conhecimento participando 
                 da Residência de TIC Software do Serratec.
             </p>
         </div>
@@ -125,10 +124,9 @@
                 <input type="text" placeholder="Digite seu e-mail" />
                 <div>
                     <input id="termo" type="checkbox">
-                    <label class="font-size" for="termo">Desejo receber e-mail com novidades</label>
+                    <label class="font-size" for="termo">Desejo receber e-mail com novidades!</label>
                 </div>
                 <input type="submit" />
-
             </form>
 
         </selection>
@@ -140,9 +138,14 @@
                 <p class="margin-p">Residência de TIC Software 2022.1 Turma 1 </p>
             </div>
             <div class="icones-rodape margin-p">
-                <img src="./assets/img/icons8-instagram-50-white.png" alt="instagram" width="30px" height="30px">
-                <img src="./assets/img/icons8-youtube-logo-50-white.png" alt="youtube" width="30px" height="30px">
-                <img src="./assets/img/icons8-linkedin-50-white.png" alt="linkedin" width="30px" height="30px">
+                <a href="https://www.instagram.com/jucouto.arte/"><img src="./assets/img/icons8-instagram-50-white.png"
+                    alt="insta" width="30px" height="30px"></a>
+                <a href="https://www.youtube.com/channel/UCq2wEEyH1fXbZkPRIoaJkWA"><img
+                    src="./assets/img/icons8-youtube-logo-50-white.png" alt="youtube" width="30px" height="30px"></a>
+                <a href="https://www.linkedin.com/in/juliana-couto/"> <img src="./assets/img/icons8-linkedin-50-white.png"
+                    alt="linkedin" width="30px" height="30px"> </a>
+                <a href="https://github.com/JuCouto"> <img src="./assets/img/icons8-github-48-white.png"
+                        alt="girhub" width="30px" height="30px"> </a>
             </div>
 
         </div>
